# HPC

./: .~lock.Conclusiones.odt#  .~lock.hpcFloat.ods#  .~lock.hpcInt.ods#  sumReduction.cu
hpc/: convolution2D  convolution2D.cu
hpc/convolution/: allConvolutions.cu  convolution.ods  convolution1DBasic.cu  convolution1DCaching.cu  convolution1DTile.cu
hpc/convolution2D/: Conclusiones.odt  Datos.ods  convolution2D.ods  convolution2DConstant.cu  convolution2DGlobal.cu  convolution2DShared.cu  shared  shared.cu  sharedOld.cu
hpc/mulMatrixTile/: hpcFloat.ods  hpcInt.ods  multMatrixTile.cu  multMatrixTileFloat.cu
hpc/proyectoFinal/: CMakeLists.txt  Makefile  client.cu  copianodo.cu  in  node.cu  node_openMp.cu  nodo.cu
hpc/sumReduction/: .~lock.sumReduction.ods#  sumReduction.ods
